--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ openai==1.58.1
 packaging==25.0
 pydantic==2.10.4
 pydantic_core==2.27.2
+requests==2.31.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
